# pipeline-and-peril-001

./: .gitignore  Makefile  PUBLICATION_READY.md  README.md  README.org  pipeline-peril-pygame-literate.org
digital/pygame/: demo.py  main.py  pygame_visual_demo.py  pygame_visual_final.py  pyproject.toml  quick_test.py  rich_demo.py  stats_dashboard_final.py  stats_dashboard_improved.py  stats_dashboard_local.py  terminal_screenshot.py  terminal_screenshot_final.py  terminal_screenshot_improved.py
digital/pygame/docs/: DATA-FORMATS.md  IMPLEMENTATION-HANDOFF.md  INTEGRATION-PLAN.md  PYGAME-REQUIREMENTS-INDEX.md  PYGAME-REQUIREMENTS.md
digital/pygame/scripts/: create-gist.py  extract-all-requirements.sh  setup-pygame-requirements.sh
digital/pygame/src/engine/: advanced_game_state.py  game_state.py  simple_game_state.py
docs/: development-journey.org  publication-ready.org
docs/images/: README.md  pygame_demo_20250911.txt  stats_dashboard_20250911.txt  terminal_demo_20250911.txt
experiments/001-service-costs/: Makefile  README.md  run_experiment.py
experiments/002-grid-size/: README.md
experiments/003-chaos-frequency/: README.md
experiments/004-victory-conditions/: README.md
experiments/005-ai-strategies/: README.md
papers/: Makefile  generate_figures.py  generate_tables.py  main-paper.aux  main-paper.bbl  main-paper.blg  main-paper.out  main-paper.tex  references.bib
papers/tables/: all_tables.tex  (+6 more)
presentations/: comprehensive-system-documentation.org  literate-programming-simulations.org  paper-game-balance-through-simulation.md
(+1 files in other folders)
